--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,19 @@ version = "0.1.0"
 description = "A command line JSON flattener"
 authors = ["Riley Flynn <riley@rileyflynn.me>"]
 license = "MIT"
+include = ["tabbyj/**/*.py"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+click = "^7.0"
+ujson = "^1.35"
 
 [tool.poetry.dev-dependencies]
+black = "=19.3b0"
+pylint = "^2.3"
+
+[tool.poetry.scripts]
+tabbyj = "tabbyj.__main__:tabbyj"
 
 [build-system]
 requires = ["poetry>=0.12"]
