--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ ujson = "^1.35"
 [tool.poetry.dev-dependencies]
 black = "=19.3b0"
 pylint = "^2.3"
+pytest = "^4.6"
+pytest-cov = "^2.7"
 
 [tool.poetry.scripts]
 tabbyj = "tabbyj.__main__:tabbyj"
