--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,5 +30,9 @@ steps:
   displayName: 'Install Package & Dependencies'
 
 - script: |
+    source ~/.cache/pypoetry/virtualenvs/tabbyj-py$(python.version)
+  displayName: 'Activate virtualenv'
+
+- script: |
     pytest
   displayName: 'pytest'
