Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,9 +30,5 @@ steps:
   displayName: 'Install Package & Dependencies'
 
 - script: |
-    source ~/.cache/pypoetry/virtualenvs/tabbyj-py$(python.version)/bin/activate
-  displayName: 'Activate Virtualenv'
-
-- script: |
-    pytest
-  displayName: 'Run Tests'
+    source ~/.cache/pypoetry/virtualenvs/tabbyj-py$(python.version)/bin/activate && pytest
+  displayName: 'Activate Virtualenv & Run Tests'
